fix color asign

--- a/index-1.html
+++ b/index-1.html
@@ -18,7 +18,7 @@
           <div class="mobile-header-info mobile-element">
              <div class="m-language-container mobile-element" id="m-language-container">
                  <div class="language-bar">
-                      <a class="pull-right" href="javascript:;" id="selectLangBtn"><i class="iconfont icon-back"></i></a>
+                      <a class="pull-left" href="javascript:;" id="selectLangBtn"><i class="iconfont icon-back"></i></a>
                       <h2>选择语言版本</h2>
                  </div>
                 
