Promise code for search function

--- a/index-2.html
+++ b/index-2.html
@@ -75,11 +75,11 @@
                             </div>
                       </li>
                       <li class="search">
-                        <a href="javascript:;" id="searchBtn-trigger-1" type="submit" data-length="200" data-width="30px">
+                        <a href="javascript:;" id="searchBtn-trigger" type="submit" data-length="200" data-width="30px">
                               <i class="iconfont icon-search"></i>                            
                         </a>
                         <form action="/ss">
-                          <input type="text" class="search_value" required="" id="searchInput-1">
+                          <input type="text" class="search_value" required="" id="searchInput">
                         </form>
                       </li>
                   </ul>   
