--- a/index-4.html
+++ b/index-4.html
@@ -143,11 +143,11 @@
                   <ul class="operator-bar-2">
                       <li class="separator"><a><i class="iconfont icon-fenge"></i></a></li>
                       <li class="search">
-                        <a href="javascript:;" id="searchBtn-trigger-1">
+                        <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
                         </a>
                         <form action="/ss">
-                           <input type="text" class="search_value" required="" id="searchInput-1">
+                           <input type="text" class="search_value" required="" id="searchInput">
                         </form>
                       </li>
                   </ul>
