--- a/index-5.html
+++ b/index-5.html
@@ -142,14 +142,14 @@
               <div class="tool-container pc-element">
                   <ul class="operator-bar-2">
                       <li class="search">
-                        <a href="javascript:;" id="searchBtn-trigger-1">
+                        <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
                         </a>
                       </li>
                   </ul>
               </div>
               <form action="/ss">
-                <input type="text" class="search_value" required="" id="searchInput-1">
+                <input type="text" class="search_value" required="" id="searchInput">
                 <div class="close"></div>
              </form>
               </div>
