--- a/index-1.html
+++ b/index-1.html
@@ -109,11 +109,11 @@
               <div class="tool-container pc-element">
                   <ul class="operator-bar-1">
                       <li class="search">
-                        <a href="javascript:;" id="searchBtn-trigger-1">
+                        <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
                         </a>
                         <form action="/ss">
-                           <input type="text" class="search_value" required="" id="searchInput-1">
+                           <input type="text" class="search_value" required="" id="searchInput">
                         </form>
                       </li>
                       <li>
