--- a/index-3.html
+++ b/index-3.html
@@ -138,11 +138,11 @@
               <div class="tool-container pc-element">
                   <ul class="operator-bar-2">
                       <li class="search">
-                        <a href="javascript:;" id="searchBtn-trigger-1">
+                        <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
                         </a>
                         <form action="/ss">
-                           <input type="text" class="search_value" required="" id="searchInput-1">
+                           <input type="text" class="search_value" required="" id="searchInput">
                         </form>
                       </li>
                   </ul>
