Promise color variable

--- a/index-4.html
+++ b/index-4.html
@@ -54,7 +54,7 @@
                         <ul class="operator-bar-2">
                                 <li>
                                         <a href="#">登录</a>
-                                        <span class="seperator">|</span>
+                                        <span class="separator">|</span>
                                         <a href="#">注册</a>
                                 </li>
                             <li>
@@ -141,7 +141,7 @@
               </div>
               <div class="tool-container pc-element">
                   <ul class="operator-bar-2">
-                      <li class="separator"><a><i class="iconfont icon-fenge"></i></a></li>
+                      <li><div class="separator"><i class="iconfont icon-fenge"></i></div></li>
                       <li class="search">
                         <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
