--- a/index-7.html
+++ b/index-7.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="stylesheets/reset.css">
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_417789_tagep8e589.css">
-    <link rel="stylesheet" href="stylesheets/5/1/1.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_417789_tqhef4z1dn.css">
+    <link rel="stylesheet" href="stylesheets/7/1/1.css">
 </head>
 
 <body>
@@ -72,22 +72,22 @@
                             
                         </ul>
             </div>
-            <a class="logo" href="#">
-                <img src="images/art365logo.png" alt="">
-                <!-- <img src="images/h.png" alt=""> -->
-            </a>
-            <ul class="share">
-                <li><a href=""><i class="iconfont icon-weibo"></i></a></li>
-                <li><a href=""><i class="iconfont icon-facebook"></i></a></li>
-                <li><a href=""><i class="iconfont icon-twitter"></i></a></li>
-                <li><a href=""><i class="iconfont icon-linkedin"></i></a></li>
-            </ul>
+            <div class="pull-right">
+                   <ul class="contact-info2">
+                       <li><i class="iconfont icon-address"></i><span>苏州工业园区</span></li>
+                       <li><i class="iconfont icon-dianhua"></i><span>400-888-288383</span></li>
+                       <li><i class="iconfont icon-youxiang"></i><span>123456@foxmail.com</span></li>
+                   </ul>
+            </div>
         </div>
         </div>
         </div>
 
         <div class="nav" id="nav">
               <div class="container">
+                <a class="logo pc-element" href="#">
+                  <img src="images/art365logo.png" alt="">
+               </a>
               <div class="menu-container">
                   <div class="menu-nav">
                         <div class="menu-items-container">
@@ -141,20 +141,19 @@
               </div>
               <div class="tool-container pc-element">
                   <ul class="operator-bar-2">
+                      <li class="separator"><a><i class="iconfont icon-fenge"></i></a></li>
                       <li class="search">
                         <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
                         </a>
+                        <form action="/ss">
+                           <input type="text" class="search_value" required="" id="searchInput">
+                        </form>
                       </li>
                   </ul>
               </div>
-              <form action="/ss">
-                <input type="text" class="search_value" required="" id="searchInput">
-                <div class="close"></div>
-             </form>
               </div>
          </div>
-        
         </div>
         <div class="mobile-header-bar mobile-element">
                 <a class="ham pull-left" href="javascript:;" id="ham">
