Finish all ten headers

--- a/index-10.html
+++ b/index-10.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="stylesheets/reset.css">
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_417789_tqhef4z1dn.css">
-    <link rel="stylesheet" href="stylesheets/4/1/1.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_417789_tagep8e589.css">
+    <link rel="stylesheet" href="stylesheets/10/1/1.css">
 </head>
 
 <body>
@@ -50,7 +50,14 @@
              </div>
           </div>
           <div class="tool-bar pc-element">
-                <div class="tool-container">
+            <a class="logo" href="#">
+                <img src="images/art365logo.png" alt="">
+            </a>
+            <div class="contact-info3">
+                    <div class="contact-info-tel"><i class="iconfont icon-dianhua"></i><span>400-888-288383</span></div>
+                    <div class="contact-info-email"><i class="iconfont icon-youxiang"></i><span>123456@foxmail.com</span></div> 
+            </div>
+            <div class="tool-container pc-element">
                         <ul class="operator-bar-2">
                                 <li>
                                         <a href="#">登录</a>
@@ -72,22 +79,12 @@
                             
                         </ul>
             </div>
-            <div class="pull-right">
-                   <ul class="contact-info2">
-                       <li><i class="iconfont icon-address"></i><span>苏州工业园区</span></li>
-                       <li><i class="iconfont icon-dianhua"></i><span>400-888-288383</span></li>
-                       <li><i class="iconfont icon-youxiang"></i><span>123456@foxmail.com</span></li>
-                   </ul>
-            </div>
         </div>
         </div>
         </div>
 
         <div class="nav" id="nav">
               <div class="container">
-                <a class="logo pc-element" href="#">
-                  <img src="images/art365logo.png" alt="">
-               </a>
               <div class="menu-container">
                   <div class="menu-nav">
                         <div class="menu-items-container">
@@ -141,19 +138,20 @@
               </div>
               <div class="tool-container pc-element">
                   <ul class="operator-bar-2">
-                      <li><div class="separator"><i class="iconfont icon-fenge"></i></div></li>
                       <li class="search">
                         <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
                         </a>
-                        <form action="/ss">
-                           <input type="text" class="search_value" required="" id="searchInput">
-                        </form>
                       </li>
                   </ul>
               </div>
+              <form action="/ss">
+                <input type="text" class="search_value" required="" id="searchInput" placeholder="搜索">
+                <div class="close"></div>
+             </form>
               </div>
          </div>
+        
         </div>
         <div class="mobile-header-bar mobile-element">
                 <a class="ham pull-left" href="javascript:;" id="ham">
