--- a/index-6.html
+++ b/index-6.html
@@ -76,7 +76,7 @@
                 <img src="images/art365logo.png" alt="">
                 <!-- <img src="images/h.png" alt=""> -->
             </a>
-            <div class="search-container search">
+            <div class="search-fixed search">
                   <form action="/ss">
                     <input type="text" class="search_value" required="" id="searchInput">
                      <a href="javascript:;" id="searchBtn-trigger" type="submit" data-length="200" data-width="30px">
