--- a/index-7.html
+++ b/index-7.html
@@ -50,7 +50,7 @@
              </div>
           </div>
           <div class="tool-bar pc-element">
-                <div class="tool-container pc-element">
+                <div class="tool-container">
                         <ul class="operator-bar-2">
                                 <li>
                                         <a href="#">登录</a>
@@ -146,12 +146,13 @@
                         <a href="javascript:;" id="searchBtn-trigger">
                           <i class="iconfont icon-search"></i>
                         </a>
-                        <form action="/ss">
-                           <input type="text" class="search_value" required="" id="searchInput">
-                        </form>
                       </li>
                   </ul>
               </div>
+               <form action="/ss">
+                <input type="text" class="search_value" required="" id="searchInput">
+                <div class="close"></div>
+               </form>
               </div>
          </div>
         </div>
